Implementation for week 04- Project 2 Part 2 - Authentication 0Auth
